# Hacking4Humanity

./: README.md  app.py  hackathon_chatbot.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: index.html
