[tool.poetry]
name = "hacking4humanity"
version = "0.1.0"
description = "Repository for Hacking for Humanity 2024"
authors = ["Jacob, Kayla, Sydney, Emilie"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
pandas = "^2.2.0"
numpy = "^1.26.4"
spacy = "^3.7.2"
newsapi-python = "^0.2.7"
pycountry = "^23.12.11"
better-profanity = "^0.7.0"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1.tar.gz"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
